  named bin_v59_cache.fcz, matching the dataVersionNumber.  Also, this improves
  behavior for OHOL, which doesn't need to rebuild the bin caches when only the
  client binary version number changes.  Fixes #1122

--Updated to latest stb_vorbis code to fix some bugs and vulnerabilities.
  Thanks npt-1707.  Fixes #1175 Fixes #1177



Server Fixes:

--Lineage server only keeps most recent 10,000 log entries.

--Logging all slow queries in lineage server.

--Anti-DOS script running on lineage server to block IP addresses making more
  than 2000 requests per day (several bots were making 50,000 requests per
  day).  OHOL game servers are whitelisted.

--No longer allowing vague lineage name searches that match 30,000 lives,
  since this was too slow. Limiting name searches to specific names that
  don't match more than 1000 lives.  

--Fixed a major slowdown bug when vague name search matches too many lineage
  server entries (custom filter was set, preventing generation=1 for the deep
  roots lists).

--Sever no longer accepts LOGIN messages with twin_counts of 0 or 1, and
  instead counts these as ordinary non-twin logins.  This was a bug in the
  server code being used by modded clients to force-end adult lives and get
  reborn.

--Fixed so that parallel lineage server requests (logging deaths) for the same
  email address force incremental sequence numbers as each request is resolved
  and finally goes through (before, parallel requests could end up using the
  same sequence number, causing the later requests to be rejected).

--Added function in back-end admin interface for re-computing lineage depth for
  a given life (up and down) in lineage server.  Will let me patch up the depth
  of the Cat family.

--Fixed behavior of sub-containers when something in the main container decays
  away to nothing, leaving a gap.  Before, the sub-container filling the gap
  (sliding into place) would forget its sub-items but those items would still